--- a/cheatSheet.html
+++ b/cheatSheet.html
@@ -14,7 +14,7 @@
     <h1>Cheatsheet Web2: Javascript</h1>
 
     <nav class="topnav" role="navigation">
-        <a class="topnav home active">Home</a>
+        <a class="topnav home active">home</a>
     </nav>
 
     <div class="table">
