--- a/cheatSheet.html
+++ b/cheatSheet.html
@@ -26,9 +26,17 @@
 
             <h3>Functies</h3>
             <ul>
-                <li><b>const allEqual = arr => arr.every(val => val === arr[0]);</b> Gemakkelijk om te checken of een
-                    array
-                    allemaal identieke elementen bevat</li>
+                <li>
+                    <b>const allEqual = arr => arr.every(val => val === arr[0]);</b>
+                    Gemakkelijk om te checken of een array allemaal identieke elementen bevat
+                </li>
+            </ul>
+
+            <h3>Tips</h3>
+            <ul>
+                <li>Opgelet: Zet in eventlistener geen () achter de functie.</li>
+                <li>Bepaald element aanspreken: rechter muisklik er op in browser => copy => copy JS path</li>
+                <li>.naam = klasse <=> #naam = id</li>
             </ul>
         </div>
 
@@ -377,13 +385,13 @@ geen item => returned null
 <b>removeItem(key):</b> verwijdert het item voor de gegeven key
 <b>clear():</b> verwijdert alle items(ook handig om bv. vanop de console local storage leeg te maken).           
         </pre>
-         <h3>Opmerkingen</h3>
-         <ul>
-             <li>opgeslagen value is altijd string en meestal JSON.</li>
-             <li>keys krijgen applicatie specifiek voorvoegsel.</li>
-             <li>checken en gebruiken aanwezige data bij start app.</li>
-             <li>wijzigingen wegschrijven zodra data beschikbaar wordt.</li>
-         </ul>
+            <h3>Opmerkingen</h3>
+            <ul>
+                <li>opgeslagen value is altijd string en meestal JSON.</li>
+                <li>keys krijgen applicatie specifiek voorvoegsel.</li>
+                <li>checken en gebruiken aanwezige data bij start app.</li>
+                <li>wijzigingen wegschrijven zodra data beschikbaar wordt.</li>
+            </ul>
         </div>
     </main>
 </body>
