--- a/cheatSheet.html
+++ b/cheatSheet.html
@@ -37,6 +37,8 @@
                 <li>Opgelet: Zet in eventlistener geen () achter de functie.</li>
                 <li>Bepaald element aanspreken: rechter muisklik er op in browser => copy => copy JS path</li>
                 <li>.naam = klasse <=> #naam = id</li>
+                <li><b>string.replace[All](zoekterm, vervangvalue):</b> kunnen handig zijn om met strings te werken.</li>
+                <li>Als je een index in een function zet wordt deze reset elke keer die functie uitgevoerd wordt.</li>
             </ul>
         </div>
 
@@ -46,14 +48,14 @@
                 <li><b>document.getElementById('id'):</b> Haalt data uit ID</li>
                 <li><b>document.querySelector('img'):</b> Haalt alle elementen uit css-selectoren of html-tags.</li>
                 <li><b>document.getElementsByClassName('classname'):</b> Haalt alle elementen uit Klasse. OPGELET:
-                    returened
+                    returnd
                     array (index toevoegen voor 1 element).</li>
                 <li><b>document.querySelectorAll('img'):</b> Haalt alle elementen uit css-selectoren of html-tags..
                     OPGELET:
-                    returened array (index toevoegen voor 1 element).</li>
+                    returnd array (index toevoegen voor 1 element).</li>
             </ul>
 
-            <h3>textContents vs innerText vs innerHTML</h3>
+            <h4>textContents vs innerText vs innerHTML</h4>
             <table cellpadding="4" cellspacing="1" summary=""
                 id="SILKTEST-21EEFF3F-DIFFERENCEBETWEENTEXTCONTENTSINNERTEXTINNERHTML-REF__TABLE_B374B1CE90374DA19410AA71563E976B"
                 class="table" frame="border" border="1" rules="all">
@@ -164,6 +166,7 @@ let selectedOptions = document.querySelectorAll("#selFruit option:checked");
                     i.p.v. .innerHTML+= "..." te schrijven.<br>
                     <b>positie:</b> beforebegin, afterbegin, beforeend, afterend
                 </li>
+                <li><b>n.appendChild(html)</b> voegt node toe aan einde lijst children.</li>
             </ul>
         </div>
 
